--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.1",
+    "gh-pages": "^2.2.0",
     "react": "^16.8.6",
+    "react-dnd": "^10.0.2",
+    "react-dnd-html5-backend": "^10.0.2",
     "react-dom": "^16.8.6",
     "react-redux": "^7.1.3",
     "react-scripts": "3.0.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -30,5 +36,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "homepage": "https://deluxe1cookie.github.io/todolist"
 }
